vbnc/vbnc/tests/Errors/30311-30.vb
Imports System
Class T
    Const M_String As uint64 = #1/1/2008#
End Class